--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
   
 	<div id="bodyblur">
         <!-- Ganti Wallpaper di Sini -->
-	   <img src="/wp.jpg" id="wallpaper"/>
+	   <img src="wp.jpg" id="wallpaper"/>
 	   <div id="thisblur"></div>
 	</div>
 	
     <!-- Ganti Audio di Sini -->
-	<audio src="/ultah.mp3" id="linkmp3"></audio>
+	<audio src="ultah.mp3" id="linkmp3"></audio>
 	
     <div id="envwrap" class="envlope-wrapper">
         <div id="envelope" class="close">
